[gd_scene load_steps=6 format=2]

[ext_resource path="res://Title screen/Title screen.gd" type="Script" id=1]
[ext_resource path="res://Resources/BO1.tres" type="DynamicFont" id=2]
[ext_resource path="res://Title screen/Options.tscn" type="PackedScene" id=3]
[ext_resource path="res://Music/Tryad - instrumentals - 10 alone.wav" type="AudioStream" id=4]
[ext_resource path="res://Music/AudioStreamPlayer.gd" type="Script" id=5]

[node name="Title screen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Select" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="New Game" type="Button" parent="Select"]
margin_right = 1004.0
margin_bottom = 27.0
custom_fonts/font = ExtResource( 2 )
text = "NEW GAME"

[node name="Load Game" type="Button" parent="Select"]
margin_top = 31.0
margin_right = 1004.0
margin_bottom = 58.0
custom_fonts/font = ExtResource( 2 )
text = "LOAD GAME"

[node name="Options" type="Button" parent="Select"]
margin_top = 62.0
margin_right = 1004.0
margin_bottom = 89.0
custom_fonts/font = ExtResource( 2 )
text = "OPTIONS"

[node name="Close Game" type="Button" parent="Select"]
margin_top = 93.0
margin_right = 1004.0
margin_bottom = 120.0
custom_fonts/font = ExtResource( 2 )
text = "CLOSE GAME"

[node name="Options" parent="." instance=ExtResource( 3 )]
visible = false

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
autoplay = true
script = ExtResource( 5 )
[connection signal="pressed" from="Select/New Game" to="." method="_on_New_Game_pressed"]
[connection signal="pressed" from="Select/Load Game" to="." method="_on_Load_Game_pressed"]
[connection signal="pressed" from="Select/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="Select/Close Game" to="." method="_on_Close_Game_pressed"]
